# banking-support-suite

./: .gitignore  README.md  package-lock.json
.github/workflows/: java-support-portal-tests.yml  ops-toolkit.yml  python-etl-tests.yml
banking_data_pipeline_python/: README.md  pyproject.toml  requirements.txt
banking_data_pipeline_python/banking_data_pipeline/: rwa_calculator.py
banking_data_pipeline_python/banking_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
banking_data_pipeline_python/data/: mock_loans.csv
banking_data_pipeline_python/scripts/: db_setup.sql
banking_data_pipeline_python/tests/: test_rwa_calculator.py
it_ops_automation_toolkit/: README.md
it_ops_automation_toolkit/scripts/: health_check.sh  log_analyzer.py
support_portal_backend/: README.md  pom.xml
support_portal_backend/src/main/java/com/support/: SupportPortalBackendApplication.java
support_portal_backend/src/main/java/com/support/controller/: SupportController.java  TransactionController.java
support_portal_backend/src/main/resources/: application.properties  data.sql
support_portal_frontend/: README.md  angular.json  package-lock.json  package.json
support_portal_frontend/src/: index.html  styles.css
support_portal_frontend/src/app/: app.spec.ts  app.ts
support_portal_frontend/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.spec.ts  dashboard.component.ts
support_portal_frontend/src/app/models/: transaction.model.ts
support_portal_frontend/src/app/services/: support.service.ts
(+6 files in other folders)
