[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-data-pipeline"
version = "0.1.0"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pytest==9.0.2"
]

[tool.setuptools]
packages = ["banking_data_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["."]
